created login and signup pages

--- a/account/signup.html
+++ b/account/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <h1>Signup</h1>
@@ -37,13 +37,13 @@
             registrationForm.reset();
 
             // Redirect to the login page
-            window.location.href = 'login\index.html';
+            window.location.href = 'login.html';
         });
 
         // Add a click event listener to the login button
         loginButton.addEventListener('click', function () {
             // Redirect to the login page
-            window.location.href = 'login\index.html';
+            window.location.href = 'login.html';
         });
     </script>
 </body>
