added links to login and register pages

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <a href="#cart" class="nav__link active-link">Cart</a>
                     </li>
                     <li id="nav__item">
-                        <a href="assets/login/index.html" class="nav__link active-link">Login</a>
+                        <a href="account/login.html" class="nav__link active-link">Login</a>
                     </li>
                     <li id="nav__item">
-                        <a href="signup.html" class="nav__link active-link">Signup</a>
+                        <a href="account/signup.html" class="nav__link active-link">Signup</a>
                     </li>
                 </ul>
                 <div id="nav__close" class="nav-close">
