updated headphone page

--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
             </div>
             <div class="home__products">
                 <article class="home__product-card" style="background-image: url('assets/img/gaming.jpg');">
-                    <a href="gaming.html" target="_blank" class="home__product-info">
+                    <a href="products/gaming.html" target="_blank" class="home__product-info">
                         <h2>Gaming Laptops</h2>
                     </a>
                 </article>
                 <article class="home__product-card" style="background-image: url('assets/img/laptop.jpg');">
-                    <a href="laptop.html" target="_blank" class="home__product-info">
+                    <a href="products/laptop.html" target="_blank" class="home__product-info">
                         <h2>Laptops</h2>
                     </a>
                 </article>
                 <article class="home__product-card" style="background-image: url('assets/img/smartphone.png');">
-                    <a href="mobile.html" target="_blank" class="home__product-info">
+                    <a href="products/ph.html" target="_blank" class="home__product-info">
                         <h2>Mobile Phones</h2>
                     </a>
                 </article>
                 <article class="home__product-card" style="background-image: url('assets/img/headphone.jpg');">
-                    <a href="headphones.html" target="_blank" class="home__product-info">
+                    <a href="products/" target="_blank" class="home__product-info">
                         <h2>Headphones</h2>
                     </a>
                 </article>
