--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </article>
                 <article class="home__product-card" style="background-image: url('assets/img/headphone.jpg');">
-                    <a href="products/" target="_blank" class="home__product-info">
+                    <a href="products/hp.html" target="_blank" class="home__product-info">
                         <h2>Headphones</h2>
                     </a>
                 </article>
