--- a/products/hp.html
+++ b/products/hp.html
@@ -29,9 +29,9 @@
                 </div>
             </div>
 
-            <button type="button">Learn more <img src="assets/img/triangle.png"></button>
+            <button type="button">Learn more <img src="img/triangle.png"></button>
         </div>
-        <img src="assets/img/rocket.png" class="rocket">
+        <img src="img/rocket.png" class="rocket">
     </div>
     <script>
         var countDownDate = new Date("Jan 30, 2024 00:00:00").getTime();
