images and product details updated

--- a/products/gaming.html
+++ b/products/gaming.html
@@ -12,26 +12,63 @@
     <div class="product-grid">
         <!-- Product 1 -->
         <div class="product-card">
-            <img src="laptop1.jpg" alt="Laptop 1">
-            <h3>Laptop 1</h3>
-            <p>Description of Laptop 1.</p>
-            <p>Price: $999.99</p>
-            <button class="view-details" data-product="Laptop 1" data-price="999.99">View Details</button>
-            <button class="add-to-cart" data-product="Laptop 1" data-price="999.99">Add to Cart</button>
+            <img src="img/alienware-m15.jpg" alt="Laptop 1">
+            <h3>Alienware M15</h3>
+            <p>R7 15.6" QHD 240hz Ryzen 7-6800, 16Gb 1TB</p>
+            <p>Price: $ 1,999.99</p>
+            <button class="view-details" data-product="Alienware M15" data-price="1999.99">View Details</button>
+            <button class="add-to-cart" data-product="Alienware M15" data-price="1999.99">Add to Cart</button>
         </div>
 
         <!-- Product 2 -->
         <div class="product-card">
-            <img src="laptop2.jpg" alt="Laptop 2">
-            <h3>Laptop 2</h3>
-            <p>Description of Laptop 2.</p>
+            <img src="img/alienware 17.jpg" alt="Laptop 2">
+            <h3>Alienware 17</h3>
+            <p>17-inches core i7-4700MQ/16/1TB Windows 8.1/2GB Graphics</p>
             <p>Price: $1,199.99</p>
-            <button class="view-details" data-product="Laptop 2" data-price="1199.99">View Details</button>
-            <button class="add-to-cart" data-product="Laptop 2" data-price="1199.99">Add to Cart</button>
+            <button class="view-details" data-product="Alienware 17" data-price="1199.99">View Details</button>
+            <button class="add-to-cart" data-product="Alienware 17" data-price="1199.99">Add to Cart</button>
         </div>
 
-        <!-- Add more product cards as needed -->
-    </div>
+        <!-- Product 3 -->
+        <div class="product-card">
+            <img src="img/zephyrus-duo.jpg" alt="Laptop 3">
+            <h3>Asus Rog Zephyrus Duo 16</h3>
+            <p>Gaming Laptop, 16" Mini LED 240Hz/3ms, QHD 16:10 Display, NVIDIA GeForce RTX 4090</p>
+            <p>Price: $1,299.99</p>
+            <button class="view-details" data-product="zephyrus-duo" data-price="1299.99">View Details</button>
+            <button class="add-to-cart" data-product="zephyrus-duo" data-price="1299.99">Add to Cart</button>
+        </div>
+
+        <!-- Product 4 -->
+        <div class="product-card">
+            <img src="img/rog-strig-g15.jpg" alt="Laptop 4">
+            <h3>Asus ROG Strig G15</h3>
+            <p>Gaming Laptop 15.6" 300Hz 3ms IPS Types FHD Display </p>
+            <p>Price: $1,399.99</p>
+            <button class="view-details" data-product="rog-strig-g15" data-price="1399.99">View Details</button>
+            <button class="add-to-cart" data-product="rog-strig-g15" data-price="1399.99">Add to Cart</button>
+        </div>
+
+        <!-- Product 5 -->
+        <div class="product-card">
+            <img src="img/hp.jpg" alt="Laptop 5">
+            <h3>HP Pavallion</h3>
+            <p>Gaming Laptop 5.6-inches Micro-edge Laptop, Intel core i5</p>
+            <p>Price: $1,499.99</p>
+            <button class="view-details" data-product="hp" data-price="1499.99">View Details</button>
+            <button class="add-to-cart" data-product="hp" data-price="1499.99">Add to Cart</button>
+        </div>
+
+        <!-- Product 6 -->
+        <div class="product-card">
+            <img src="img/victus.jpg" alt="Laptop 6">
+            <h3>HP Victus</h3>
+            <p>Gaming Laptop 16.1-inches FHD IPS 144Hz, Intel Core i7-11800H, NVIDIA GeForce RTX 3060</p>
+            <p>Price: $1,599.99</p>
+            <button class="view-details" data-product="victus" data-price="1599.99">View Details</button>
+            <button class="add-to-cart" data-product="victus" data-price="1599.99">Add to Cart</button>
+        </div>
 
     <!-- Product Details Popup -->
     <div class="product-popup">
