--- a/products/gaming.html
+++ b/products/gaming.html
@@ -70,6 +70,26 @@
             <button class="add-to-cart" data-product="victus" data-price="1599.99">Add to Cart</button>
         </div>
 
+        <!-- Product 7 -->
+        <div class="product-card">
+            <img src="img/acer.jpg" alt="Laptop 7">
+            <h3>Acer Predator Helios 300</h3>
+            <p>Gaming Laptop 15.6-inches FHD 144Hz IPS Display, Intel Core i7-11800H, NVIDIA GeForce RTX 3060</p>
+            <p>Price: $1,699.99</p>
+            <button class="view-details" data-product="acer" data-price="1699.99">View Details</button>
+            <button class="add-to-cart" data-product="acer" data-price="1699.99">Add to Cart</button>
+        </div>
+
+        <!-- Product 8 -->
+        <div class="product-card">
+            <img src="img/dell-g16.jpg" alt="Laptop 8">
+            <h3>Dell G16</h3>
+            <p>Gaming Laptop 15.6-inches FHD 120Hz IPS Display, Intel Core i7-11800H, NVIDIA GeForce RTX 3060</p>
+            <p>Price: $1,799.99</p>
+            <button class="view-details" data-product="dell-g16" data-price="1799.99">View Details</button>
+            <button class="add-to-cart" data-product="dell-g16" data-price="1799.99">Add to Cart</button>
+        </div>
+
     <!-- Product Details Popup -->
     <div class="product-popup">
         <div class="popup-content">
