--- a/products/gaming.html
+++ b/products/gaming.html
@@ -94,11 +94,73 @@
     <div class="product-popup">
         <div class="popup-content">
             <span class="close-popup">&times;</span>
-            <h2>Product Details</h2>
-            <p id="popup-product-name">Product Name</p>
-            <p id="popup-product-description">Product Description</p>
-            <p id="popup-product-price">Product Price</p>
-            <button class="add-to-cart-popup">Add to Cart</button>
+            <img src="img/alienware-m15.jpg" alt="Alienware M15" id="popup-image">
+            <h2 id="popup-title">Alienware M15</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/alienware 17.jpg" alt="alienware 17" id="popup-image">
+            <h2 id="popup-title">Alienware 17</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/zephyrus-duo.jpg" alt="zephyrus-duo" id="popup-image">
+            <h2 id="popup-title">Asus Rog Zephyrus Duo</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/rog-strig-g15.jpg" alt="rog string" id="popup-image">
+            <h2 id="popup-title">Asus Rog Strig</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/hp.jpg" alt="hp pavvilion" id="popup-image">
+            <h2 id="popup-title">HP Pavillion</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/victus.jpg" alt="hp victus" id="popup-image">
+            <h2 id="popup-title">HP Victus</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/acer.jpg" alt="acer Predator" id="popup-image">
+            <h2 id="popup-title">Acer Predator</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+    </div>
+    <div class="product-popup">
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img/dell-g16.jpg" alt="dell-g16" id="popup-image">
+            <h2 id="popup-title">Dell G16</h2>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
         </div>
     </div>
 
