--- a/products/laptop.html
+++ b/products/laptop.html
@@ -11,16 +11,20 @@
 
     <div class="product-grid">
         <div class="product-card">
-            <img src="laptop1.jpg" alt="Laptop 1">
-            <h3>Laptop Model 1</h3>
-            <p>Description of Laptop Model 1.</p>
-            <button class="view-details">View Details</button>
+            <img src="img1/macbookpro.jpg" alt="macbookpro">
+            <h3>Mac Book Pro </h3>
+            <p>15-inches Retina Laptop i7 2.8GHz-4.0GHz/ 16GB DDR3 RAM / 2TB SSt </p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="macbookpro" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="macbookpro" data-price="999.95">Add to Cart</button>
         </div>
         <div class="product-card">
             <img src="laptop2.jpg" alt="Laptop 2">
             <h3>Laptop Model 2</h3>
             <p>Description of Laptop Model 2.</p>
-            <button class="view-details">View Details</button>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="dell-g16" data-price="1799.99">View Details</button>
+            <button class="add-to-cart" data-product="dell-g16" data-price="1799.99">Add to Cart</button>
         </div>
         <!-- Add more product cards here -->
     </div>
