--- a/products/laptop.html
+++ b/products/laptop.html
@@ -13,33 +13,104 @@
         <div class="product-card">
             <img src="img1/macbookpro.jpg" alt="macbookpro">
             <h3>Mac Book Pro </h3>
-            <p>15-inches Retina Laptop i7 2.8GHz-4.0GHz/ 16GB DDR3 RAM / 2TB SSt </p>
+            <p>15-inches Retina Laptop i7 2.8GHz-4.0GHz/ 16GB DDR3 RAM / 2TB SSD </p>
             <p>Price: $999.95</p>
             <button class="view-details" data-product="macbookpro" data-price="999.95">View Details</button>
             <button class="add-to-cart" data-product="macbookpro" data-price="999.95">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="laptop2.jpg" alt="Laptop 2">
-            <h3>Laptop Model 2</h3>
-            <p>Description of Laptop Model 2.</p>
+            <img src="img1/asusvivobook.jpg" alt="asusvivobook">
+            <h3>Asus vivo Book</h3>
+            <p>8GB RAM /512GB PCle SSD</p>
             <p>Price: $999.95</p>
             <button class="view-details" data-product="dell-g16" data-price="1799.99">View Details</button>
             <button class="add-to-cart" data-product="dell-g16" data-price="1799.99">Add to Cart</button>
         </div>
-        <!-- Add more product cards here -->
+       
+        <div class="product-card">
+            <img src="img1/dellinsp.jpg" alt="dellinsp">
+            <h3>Dell Inspiron</h3>
+            <p>15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="dell-inspiron" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="dell-inspiron" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/samsungbook.jpg" alt="samsungbook">
+            <h3>Samsung Book</h3>
+            <p>15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="samsung-book" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="samsung-book" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/lenovoidea.jpg" alt="lenovoidea">
+            <h3>Lenovo Idea</h3>
+            <p>15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="lenovo-idea" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="lenovo-idea" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/vivobook.jpg" alt="vivobook">
+            <h3>Vivo Book</h3>
+            <p>15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="vivo-book" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="vivo-book" data-price="999.95">Add to Cart</button>
+        </div>
     </div>
 
     <div class="product-popup">
         <div class="popup-content">
             <span class="close-popup">&times;</span>
-            <img src="" alt="Product Image" id="popup-image">
-            <h2 id="popup-title">Product Title</h2>
-            <p id="popup-description">Product Description.</p>
+            <img src="img1/macbookpro.jpg" alt="macbookpro" id="popup-image">
+            <h2 id="popup-title">Mac Book Pro</h2>
+            <p id="popup-description">15-inches Retina Laptop i7 2.8GHz-4.0GHz/ 16GB DDR3 RAM / 2TB SSD</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/asusvivobook.jpg" alt="asusvivobook" id="popup-image">
+            <h2 id="popup-title">Asus vivo Book</h2>
+            <p id="popup-description">8GB RAM /512GB PCle SSD</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/dellinsp.jpg" alt="dellinsp" id="popup-image">
+            <h2 id="popup-title">Dell Inspiron</h2>
+            <p id="popup-description">15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/samsungbook.jpg" alt="samsungbook" id="popup-image">
+            <h2 id="popup-title">Samsung Book</h2>
+            <p id="popup-description">15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/lenovoidea.jpg" alt="lenovoidea" id="popup-image">
+            <h2 id="popup-title">Lenovo Idea</h2>
+            <p id="popup-description">15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/vivobook.jpg" alt="vivobook" id="popup-image">
+            <h2 id="popup-title">Vivo Book</h2>
+            <p id="popup-description">15.6" FHD Touchscreen Laptop Computer 10th Gen Intel Quad-Core i5 1035G1 up to 3.6GHz 12GB DDR4 RAM 512GB PCle SSD 802.11ac WiFi Bluetooth 4.2 USB 3.1 HDMI Windows 10 Home Black</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="buy-now">Buy Now</button>
         </div>
     </div>
-
     <script src="laptop.js"></script>
 </body>
 </html>
