phone page updated

--- a/products/ph.html
+++ b/products/ph.html
@@ -11,26 +11,133 @@
 
     <div class="product-grid">
         <div class="product-card">
-            <img src="phone1.jpg" alt="Phone 1">
-            <h3>Phone Model 1</h3>
-            <p>Description of Phone Model 1.</p>
-            <button class="view-details">View Details</button>
+            <img src="img1/rog 7 ultimate.jpg" alt="Rog 7">
+            <h3>Rog 7 Ultimate</h3>
+            <p>16GB RAM, 512GB ROM, Strom White</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="Rog 7" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="Rog 7" data-price="999.95">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="phone2.jpg" alt="Phone 2">
-            <h3>Phone Model 2</h3>
-            <p>Description of Phone Model 2.</p>
-            <button class="view-details">View Details</button>
+            <img src="img1/z-flip.jpg" alt="z-flip">
+            <h3>Z-Flip</h3>
+            <p>8GB RAM 256GB ROM </p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="z-flip" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="z-flip" data-price="999.95">Add to Cart</button>>
         </div>
-        <!-- Add more product cards here -->
+        <div class="product-card">
+            <img src="img1/z-fold.jpg" alt="z-fold">
+            <h3>Z-Fold</h3>
+            <p>12GB RAM 512GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="z-fold" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="z-fold" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/1+ 10R.jpg" alt="1+ 10R">
+            <h3>1+ 10R</h3>
+            <p>8GB RAM 256GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="1+ 10R" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="1+ 10R" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/1+ nordCE.jpg" alt="1+ nordCE">
+            <h3>1+ nordCE</h3>
+            <p>8GB RAM 256GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="1+ nordCE" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="1+ nordCE" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/pixel.jpg" alt="pixel">
+            <h3>Pixel</h3>
+            <p>8GB RAM 256GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="pixel" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="pixel" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/vivox80.jpg" alt="vivox80">
+            <h3>Vivo X80</h3>
+            <p>8GB RAM 256GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="vivox80" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="vivox80" data-price="999.95">Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img1/vivo v27.jpg" alt="vivo v27">
+            <h3>Vivo V27</h3>
+            <p>8GB RAM 256GB ROM</p>
+            <p>Price: $999.95</p>
+            <button class="view-details" data-product="vivo v27" data-price="999.95">View Details</button>
+            <button class="add-to-cart" data-product="vivo v27" data-price="999.95">Add to Cart</button>
+        </div>
     </div>
 
     <div class="product-popup">
         <div class="popup-content">
             <span class="close-popup">&times;</span>
-            <img src="" alt="Product Image" id="popup-image">
-            <h2 id="popup-title">Product Title</h2>
-            <p id="popup-description">Product Description.</p>
+            <img src="img1/rog 7 ultimate.jpg" alt="Rog 7" id="popup-image">
+            <h2 id="popup-title">Rog 7</h2>
+            <p id="popup-description">16GB RAM, 512GB ROM, Strom White</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/z-flip.jpg" alt="z-flip" id="popup-image">
+            <h2 id="popup-title">Z-Flip</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/z-fold.jpg" alt="z-fold" id="popup-image">
+            <h2 id="popup-title">Z-Fold</h2>
+            <p id="popup-description">12GB RAM 512GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/1+ 10R.jpg" alt="1+ 10R" id="popup-image">
+            <h2 id="popup-title">1+ 10R</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/1+ nordCE.jpg" alt="1+ nordCE" id="popup-image">
+            <h2 id="popup-title">1+ nordCE</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/pixel.jpg" alt="pixel" id="popup-image">
+            <h2 id="popup-title">Pixel</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/vivox80.jpg" alt="vivox80" id="popup-image">
+            <h2 id="popup-title">Vivo X80</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
+            <button class="add-to-cart">Add to Cart</button>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="popup-content">
+            <span class="close-popup">&times;</span>
+            <img src="img1/vivo v27.jpg" alt="vivo v27" id="popup-image">
+            <h2 id="popup-title">Vivo V27</h2>
+            <p id="popup-description">8GB RAM 256GB ROM</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="buy-now">Buy Now</button>
         </div>
