--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <div class="nav__menu" id="nav-menu">
                 <ul id="nav__list">
                     <li id="nav__item">
-                        <a href="#home" class="nav__link active-link">Home</a>
+                        <a href="#home" class="nav_link active-link">Home</a>
                     </li>
                     <li id="nav__item">
-                        <a href="#featured" class="nav__link active-link">Featured</a>
+                        <a href="#featured" class="nav_link active-link">Featured</a>
                     </li>
                     <li id="nav__item">
-                        <a href="#cart" class="nav__link active-link">Cart</a>
+                        <a href="#cart" class="nav_link active-link">Cart</a>
                     </li>
                     <li id="nav__item">
-                        <a href="account/login.html" class="nav__link active-link">Login</a>
+                        <a href="account/login.html" class="nav_link active-link">Login</a>
                     </li>
                     <li id="nav__item">
-                        <a href="account/signup.html" class="nav__link active-link">Signup</a>
+                        <a href="account/signup.html" class="nav_link active-link">Signup</a>
                     </li>
                 </ul>
                 <div id="nav__close" class="nav-close">
