login page updated

--- a/account/login.html
+++ b/account/login.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <div class="background-image">
+        <img src="lbg.jpg" alt="background-image">
+    </div>
     <h1>Login</h1>
-
     <form id="login-form">
         <label for="login-username">Username:</label>
         <input type="text" id="login-username" required>
