--- a/account/login.html
+++ b/account/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="background-image">
-        <img src="lbg.jpg" alt="background-image">
+        <img src="bg.jpg" alt="background-image">
     </div>
     <h1>Login</h1>
     <form id="login-form">
