--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <h2 class="featured-title">HP Victus 7KJ6PAACJ</h2>
                         <p class="featured-description">Intel Core i5 11th Gen 11400H 6.1 Inches</p>
                         <span class="featured-price">₹60,141</span>
-                        <a href="#s" class="button featured-button">Buy Now</a>
+                        <a href="#" class="button featured-button">Buy Now</a>
                     </div>
             </article> 
         </div>
